<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lightning of Dark</string>
    <string name="settings">設定</string>
    <string name="settings_list">リスト設定 (要再起動)</string>
    <string name="loading">Loading...</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="param_success_tweet">ツイートしました。%1$dEXP獲得。</string>
    <string name="error_tweet">ツイートできませんでした</string>
    <string name="success_retweet">リツイートしました</string>
    <string name="error_retweet">リツイートできませんでした</string>
    <string name="is_unretweet">リツイート済みです。\nリツイートを取り消しますか？</string>
    <string name="success_unretweet">リツイートを取り消しました</string>
    <string name="error_unretweet">リツイートを取り消せませんでした</string>
    <string name="success_favorite">ふぁぼりました</string>
    <string name="error_favorite">ふぁぼれませんでした</string>
    <string name="is_unfavorite">ふぁぼ済みです。\nあんふぁぼしますか？</string>
    <string name="success_unfavorite">あんふぁぼしました</string>
    <string name="error_unfavorite">あんふぁぼできませんでした</string>
    <string name="is_post_delete">本当にツイ消ししますか？</string>
    <string name="success_post_delete">ツイ消ししました</string>
    <string name="error_post_delete">ツイ消しできませんでした</string>
    <string name="param_level_up">レベル%1$dに上がった！</string>

    <string name="extract_with_regex">正規表現で抽出</string>
    <string name="input_regex">正規表現を入力してください</string>
    <string name="include_retweet">リツイートを含める</string>
    <string name="invalid_pattern">正規表現が不正です</string>
    <string name="open_in_browser">ブラウザで開く</string>
    <string name="reply">Reply</string>
    <string name="reply_all">ReplyAll</string>

    <string name="error_get_timeline">タイムライン取得エラー</string>
    <string name="error_get_mention">メンション取得エラー</string>
    <string name="error_get_favorite">ふぁぼ取得エラー</string>
    <string name="error_get_follow">フォロー取得エラー</string>
    <string name="error_get_follower">フォロワー取得エラー</string>
    <string name="error_get_list">リスト取得エラー</string>

    <string name="error_get_user_icon">ユーザーアイコンの取得に失敗しました</string>

    <string name="success_get_talk_list">会話取得完了</string>
    <string name="error_get_talk_list">会話取得エラー</string>

    <string name="success_select_picture">画像を選択しました</string>
    <string name="error_select_picture">画像を選択できませんでした</string>

    <string name="nothing">ありませんでした</string>
    <string name="param_regex_result_count">%1$d件中 %2$d件見つかりました</string>

    <string name="error_get_status">ツイートの取得に失敗しました</string>
    <string name="edittext_empty">なにも入力されていません</string>
    <string name="param_success_account_delete">\@%s を削除しました</string>
    <string name="list_not_selected">リストが選択されていません</string>
    <string name="param_oauth_description"><![CDATA[Custom CK/CSを使う場合、CallbackURLを<br><font color=blue><u>%s</u></font><br>に設定してください。<br>（タップでコピー）]]></string>
    <string name="error_get_request_token">RequestTokenの取得に失敗しました</string>
    <string name="param_account_already_exists">\@%1$s はすでに登録されています</string>
    <string name="success_add_account">アカウントを追加しました</string>
    <string name="error_get_access_token">アクセストークンの取得に失敗しました</string>
    <string name="done_copy_clip_board">クリップボードにコピーしました</string>
    <string name="url_not_match_pattern_and_dont_save">URLがパターンにマッチしません\n保存できませんでした</string>
    <string name="error_get_image">画像の取得失敗</string>
    <string name="error_get_original_image">オリジナル画像の取得に失敗しました</string>
    <string name="error_get_video">ビデオの取得失敗</string>
    <string name="error_get_user_detail">ユーザー情報を取得できませんでした</string>
    <string name="save">保存</string>
    <string name="param_saved">保存しました\n%s</string>
    <string name="param_saved_original">オリジナルを保存しました\n%s</string>
    <string-array name="image_option">
        <item>@string/open_in_browser</item>
        <item>@string/save</item>
    </string-array>
    <string-array name="image_option_orig">
        <item>オリジナル画質をブラウザで開く</item>
        <item>@string/save</item>
    </string-array>

    <string name="tweet_bomb">ツイート爆撃</string>
    <string name="search_user">ユーザー検索</string>
    <string name="account">アカウント</string>
    <string name="level_info">レベル情報</string>
    <string name="use_info">使用情報</string>

    <string name="input_users_screen_name">ユーザーのスクリーンネームを入力してください</string>
    <string name="add_account">アカウントを追加</string>
    <string name="change_account">切り替え</string>
    <string name="delete">削除</string>
    <string name="param_next_level_total_exp">Lv.%1$s\nレベルアップまで: %2$s EXP\n取得経験値: %3$s EXP</string>
    <string name="param_use_info_text">今日: %1$s\n昨日: %2$s\n\n過去30日: %3$s\n合計: %4$s\n\n計測開始日: %5$s</string>

    <string name="page_title_mention">Mention</string>
    <string name="param_page_title_home">Home - Lv.%d</string>

    <string name="cache_deleted">キャッシュが削除されました</string>
    <string name="limit_5000_users">5,000ユーザーまでの対応</string>
    <string-array name="follow2list_methods">
        <item>新しくリストを作って同期する</item>
        <item>既存のリストと同期をとる</item>
    </string-array>
    <string name="error_create_list">リストの作成に失敗しました</string>
    <string name="success_follow2list">フォローしているユーザーをリストにぶち込みました</string>
    <string name="error_follow2list">リストに追加できませんでした…</string>
    <string name="is_release">解除しますか？</string>
    <string name="choose_list_as_tl">TLとして読み込むリストを選択してください</string>
    <string name="input_auto_load_interval_second">自動で取得する間隔を秒で入力してください</string>
    <string name="error_auto_load_tl_interval">TLを自動で取得するには60秒間隔以上で設定する必要があります\nこれを回避するにはリストをTLとして使用してください</string>
    <string name="param_setting_value_num_zero_is_disable">設定値: %d (0: 無効)</string>
    <string name="param_cache_num_megabyte">キャッシュ: %sMB</string>

    <string name="choose_app_start_load_list">起動時に読み込むリストを選択してください</string>
    <string name="choose_list">リストを選択してください</string>
    <string name="param_setting_value_str">設定値: %s</string>

    <string name="new_tweet">New Tweet</string>
    <string name="unofficial_rt">UnOfficialRT</string>
    <string name="voice_input">音声入力</string>

    <string name="permission_notification_access_message">楽曲情報を取得するため通知へのアクセスを許可してください。</string>
    <string name="permission_rejected">(๑•﹏•๑*)</string>

    <string name="param_user_count_detail">Tweet: %1$s  Fav: %2$s  Follow: %3$s  Follower: %4$s</string>
    <string name="page_title_detail">Detail</string>
    <string name="page_title_tweet">Tweet</string>
    <string name="page_title_favorite">Favorite</string>
    <string name="page_title_follow">Follow</string>
    <string name="page_title_follower">Follower</string>

    <!-- oauth.xml -->
    <string name="layout_oauth_auth">OAuth認証</string>
    <string name="layout_oauth_description">Custom CK/CS\n使いたい場合は入力してください。使わなくても認証できます</string>
    <string name="layout_consumer_key">Consumer Key</string>
    <string name="layout_consumer_secret">Consumer Secret</string>

    <!-- tweet_bomb.xml -->
    <string name="layout_static_text">固定テキスト</string>
    <string name="layout_repeat_text">繰り返しテキスト</string>
    <string name="layout_repeat_count">繰り返し回数</string>

    <!-- user_0.xml -->
    <string name="layout_bio">bio</string>
    <string name="layout_location">場所</string>
    <string name="layout_link">リンク</string>

    <!-- ImageView content description -->
    <string name="content_desc_tweet_button">ツイートボタン</string>
    <string name="content_desc_option_button">オプションボタン</string>
    <string name="content_desc_tweet_user_icon">ユーザーアイコン</string>
    <string name="content_desc_retweet_user_icon">リツイートユーザーアイコン</string>
    <string name="content_desc_upload_image">アップロードする画像</string>
    <string name="content_desc_user_banner">ユーザーバナー</string>
    <string name="content_desc_user_icon">ユーザーアイコン</string>
    <string name="content_desc_friendship_target_icon">関係先ユーザーアイコン</string>
    <string name="content_desc_friendship_source_icon">関係元ユーザーアイコン</string>
    <string name="content_desc_tweet_image">ツイートの画像</string>
    <string name="content_desc_tweet_video">ツイートの動画</string>

    <string name="no_text">null</string>

    <string name="icon_bomb">&#xf1e2;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_experience">&#xf0c3;</string>
    <string name="icon_clock">&#xf017;</string>
    <string name="icon_cog">&#xf013;</string>

    <string name="icon_reply">&#xf3e5;</string>
    <string name="icon_replyAll">&#xf122;</string>
    <string name="icon_retweet">&#xf079;</string>
    <string name="icon_quote">&#xf10e;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_comment">&#xf086;</string>
    <string name="icon_trash">&#xf2ed;</string>

    <string name="icon_tweet">&#xf044;</string>
    <string name="icon_image">&#xf03e;</string>
    <string name="icon_close">&#xf00d;</string>
    <string name="icon_mic">&#xf130;</string>
    <string name="icon_music">&#xf001;</string>
    <string name="icon_text">&#xf031;</string>
    <string-array name="text_options">
        <item>お　ま　た　せ</item>
        <item>突然の死</item>
    </string-array>

    <string name="icon_tweetCount">&#xf007;&#xf075;</string>
    <string name="icon_favCount">&#xf007;&#xf005;</string>
    <string name="icon_followCount">&#xf007;&#xf061;</string>
    <string name="icon_followerCount">&#xf007;&#xf060;</string>
    <string name="icon_userCreate">&#xf234;</string>
    <string name="icon_protect">&#xf023;</string>

    <string name="icon_followEach">&#xf337;</string>
    <string name="icon_followFollow">&#xf30b;</string>
    <string name="icon_followFollower">&#xf30a;</string>
    <string name="icon_followBlock">&#xf05e;</string>

    <string-array name="fontSizeList">
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>
        <item>10.5</item>
        <item>11</item>
        <item>11.5</item>
        <item>12</item>
        <item>12.5</item>
        <item>13</item>
        <item>13.5</item>
        <item>14</item>
        <item>14.5</item>
        <item>15</item>
        <item>15.5</item>
        <item>16</item>
        <item>16.5</item>
        <item>17</item>
        <item>17.5</item>
        <item>18</item>
        <item>18.5</item>
        <item>19</item>
        <item>19.5</item>
        <item>20</item>
        <item>20.5</item>
        <item>21</item>
        <item>21.5</item>
        <item>22</item>
        <item>22.5</item>
        <item>23</item>
    </string-array>

</resources>
