<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/userBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_desc_user_banner"
            android:scaleType="fitXY"
            android:src="@drawable/user_header_empty" />

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/content_desc_user_icon"
            android:src="@drawable/icon_loading" />

        <TextView
            android:id="@+id/userScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@color/userpageTextBackground"
            android:text="@string/no_text" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@color/userpageTextBackground"
            android:text="@string/no_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textBio"
            android:layout_alignStart="@+id/textBio"
            android:layout_marginTop="3dp"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userBio"
            android:layout_alignStart="@+id/userBio"
            android:layout_marginTop="15dp"
            android:text="@string/layout_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLocation"
            android:layout_alignStart="@+id/textLocation"
            android:layout_marginTop="3dp"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/textLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLocation"
            android:layout_alignStart="@+id/userLocation"
            android:layout_marginTop="15dp"
            android:text="@string/layout_link"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLink"
            android:layout_alignStart="@+id/textLink"
            android:layout_marginTop="3dp"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/iconTweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userLink"
            android:layout_alignStart="@+id/userLink"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="3dp"
            android:text="@string/icon_tweetCount" />

        <TextView
            android:id="@+id/userTweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iconTweetCount"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@+id/iconTweetCount"
            android:text="@string/no_text" />

        <TextView
            android:id="@+id/iconFavoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconTweetCount"
            android:layout_alignStart="@+id/iconTweetCount"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="3dp"
            android:text="@string/icon_favCount" />

        <TextView
            android:id="@+id/userFavoriteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iconFavoriteCount"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@+id/iconFavoriteCount"
            android:text="@string/no_text" />

        <TextView
            android:id="@+id/iconFollowCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconFavoriteCount"
            android:layout_alignStart="@+id/iconFavoriteCount"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="3dp"
            android:text="@string/icon_followCount" />

        <TextView
            android:id="@+id/userFollowCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iconFollowCount"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@+id/iconFollowCount"
            android:text="@string/no_text" />

        <TextView
            android:id="@+id/iconFollowerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconFollowCount"
            android:layout_alignStart="@+id/iconFollowCount"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="3dp"
            android:text="@string/icon_followerCount" />

        <TextView
            android:id="@+id/userFollowerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iconFollowerCount"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@+id/iconFollowerCount"
            android:text="@string/no_text" />

        <TextView
            android:id="@+id/iconCreateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconFollowerCount"
            android:layout_alignStart="@+id/iconFollowerCount"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="20dp"
            android:text="@string/icon_userCreate" />

        <TextView
            android:id="@+id/userCreateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iconCreateDate"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@+id/iconCreateDate"
            android:text="@string/no_text" />

        <TextView
            android:id="@+id/textBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPageSourceIcon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/layout_bio"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/userPageIsFollow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/userPageSourceIcon"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/userPageSourceIcon"
            android:gravity="center"
            android:textColor="@color/icon"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/userPageTargetIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/userPageIsFollow"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/userPageIsFollow"
            android:contentDescription="@string/content_desc_friendship_target_icon"
            android:src="@drawable/icon_loading" />

        <ImageView
            android:id="@+id/userPageSourceIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/userBanner"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_desc_friendship_source_icon"
            android:src="@drawable/icon_loading" />

        <TextView
            android:id="@+id/userPageProtected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/userName"
            android:layout_alignBottom="@+id/userName"
            android:layout_toEndOf="@+id/userName"
            android:background="@color/userpageTextBackground"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/icon_protect"
            android:textColor="@color/icon"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>