<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartOAuth">

    <Button
        android:id="@+id/ninsyo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="clickOAuth"
        android:text="@string/layout_oauth_auth" />

    <EditText
        android:id="@+id/edit_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_ck"
        android:layout_alignBottom="@+id/text_ck"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/text_ck"
        android:ems="10"
        android:singleLine="true" />

    <TextView
        android:id="@+id/text_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/layout_consumer_key" />

    <TextView
        android:id="@+id/text_cs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_ck"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/layout_consumer_secret" />

    <EditText
        android:id="@+id/edit_cs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_cs"
        android:layout_alignBottom="@+id/text_cs"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/text_cs"
        android:ems="10"
        android:singleLine="true" />

    <TextView
        android:id="@+id/oauthDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_cs"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="clickOAuthDescription" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/layout_oauth_description"
        android:textSize="15sp" />

</RelativeLayout>