<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/staticTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_static_text" />

        <requestFocus />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loopTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_repeat_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loopCountEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/layout_repeat_count"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
