<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_static_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bomb_static_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_static_text" />

            <requestFocus />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_loop_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_static_text"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bomb_loop_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_repeat_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_loop_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_loop_text"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bomb_loop_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/layout_repeat_count"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</RelativeLayout>
